# OOPGame-HCMUS-Purrsuit

./: .gitignore  AI-LOG.md  CMakeLists.txt  DDD.md  README.md  build.bat  package_game.bat  save.json
assets/maps/: House.json  Level10_Stage4_after.json  Level11_Castle.json  Level1_TransitionMap1.json  Level2_Stage1.json  Level3_House.json  Level4_House_after.json  Level5_Stage1_after.json  Level6_Stage2.json  Level7_Stage3.json  Level8_TransitionMap2.json  Level9_Stage4.json  Map1.json  Stage1.json  Stage1_ItemsTest.json  Stage1_after.json  Stage1_new.json  Stage3.json  Stage4.json  Stage4_1.json  TransitionMap.json  map2.json  test1.json  testMap2.json
include/: Character.h  Game.h  Map.h  Player.h
src/: Character.cpp  Game.cpp  Map.cpp  Player.cpp  main.cpp
src/app/: CollisionHandler.cpp  CollisionHandler.h  Game.cpp  Game.h  Initializers.cpp  Initializers.h
src/app/init/: Initializers.cpp  Initializers.h
src/app/loader/: MapFactory.cpp  MapFactory.h
src/app/saveGame/: GameSave.cpp  GameSave.h
src/app/service/: CollisionHandler.cpp  Initializers.cpp  Initializers.h  InventoryTextureManager.cpp  InventoryTextureManager.h  ItemEffectHandler.cpp  ItemEffectHandler.h  SoundEventManager.cpp  SoundEventManager.h  TransitionManager.cpp  TransitionManager.h
src/app/state/: GameStateMachine.h
src/app/ui/: Color.h  UIInputHandler.cpp  UIInputHandler.h  UIRenderer.cpp  UIRenderer.h
src/core/: Camera.h  Constants.h  Game.cpp  Game.h  GameEvent.cpp  GameRender.cpp  GameStateType.h  GameStates.cpp  GameUpdate.cpp  MemoryUtils.h  Services.h
src/core/assets/: AudioManager.cpp  AudioManager.h  TextureManager.cpp  TextureManager.h  UIManager.cpp  UIManager.h
src/core/game/: Game.cpp  Game.h  GameEvent.cpp  GameRender.cpp  GameStateType.h  (+2 more)
uml/code/: UML_1  UML_2  UML_3  UML_4  UML_5  UML_6  UML_7
(+76 files in other folders)
